trunk/Archive2/83/2d2b8a76fa1f35/output
main.cpp:5:7: error: object of type 'std::basic_ifstream<char>' cannot be assigned because its copy assignment operator is implicitly deleted
    f = std::ifstream(__FILE__);
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/fstream:427:28: note: copy assignment operator of 'basic_ifstream<char, std::char_traits<char> >' is implicitly deleted because base class 'basic_istream<char, std::char_traits<char> >' has a deleted copy assignment operator
    class basic_ifstream : public basic_istream<_CharT, _Traits>
                           ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:58:27: note: copy assignment operator of 'basic_istream<char, std::char_traits<char> >' is implicitly deleted because base class 'basic_ios<char, std::char_traits<char> >' has a deleted copy assignment operator
    class basic_istream : virtual public basic_ios<_CharT, _Traits>
                          ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/basic_ios.h:66:23: note: copy assignment operator of 'basic_ios<char, std::char_traits<char> >' is implicitly deleted because base class 'std::ios_base' has an inaccessible copy assignment operator
    class basic_ios : public ios_base
                      ^
1 error generated.
